--- a/backend/requirements_fastapi.txt
+++ b/backend/requirements_fastapi.txt
@@ -1,9 +1,9 @@
-functions-framework==3.4.0
-flask==2.3.3
-flask-cors==4.0.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
 pydantic==2.5.0
-pydantic[email]==2.5.0
 pydantic-extra-types[email]==2.1.0
+email-validator==2.1.0
+python-multipart==0.0.6
 python-dotenv==1.0.0
 supabase==2.0.2
 markdown==3.5.1
